# NibelungenbrueckeJupyterNFDI

./: .gitignore  Displacement_1.pkl  Dockerfile  J4NDFI_interface.ipynb  J4NFDI_interface.ipynb  README.md  _BACKUP_3651759.gitignore  digital_twin_ui.py  dodo.py  environment.yml  environment_backup.yml  interface.ipynb  interface.py  interface_NB_DT.ipynb  interface_test.py  nibelungenbruecke.yml  output_data.json  pyproject.toml  setup.py
.binder/: Dockerfile
Binder/: nibelungenbruecke.yml
binder/: Dockerfile  environment.yml
input/data/: README.md
input/models/: README.md
input/sensors/: sensors_displacements.json  sensors_displacements_probeye_output.json
input/settings/: doit_parameters.json  generate_data_parameters.json  inference_parameters.json  model_parameters.json  postprocess_parameters.json
nibelungenbruecke/dt_api/: access.py  api.HTTP  main.py  main_mult.py  schemas.py  test.py
nibelungenbruecke/scripts/: README.md
nibelungenbruecke/tasks/: activate_orchestrator_tasks.py  digital_twin_data_tasks.py  generate_model_tasks.py  generate_synthetic_data_tasks.py  postprocess_results_tasks.py  query_posterior_predictive_tasks.py  run_inference_tasks.py
scripts/data_generation/: README.md  displacement3D_generator.py  displacement_generator.py  generate_data.py  generator_model_base_class.py  (+1 more)
tasks/: README.md  generate_model_tasks.py  generate_synthetic_data_tasks.py  postprocess_results_tasks.py  run_inference_tasks.py
tests/: API_extraction_test.py  API_output_test.py  README.md  fetch_and_process_data.py  test_compare_sensor_data.py
(+188 files in other folders)
